add list of implemented stream-types to api + minor improvements to synchronization
